@@ -1,16 +1,16 @@
 {
-  "timestamp" : "2022-05-28T08:20:53Z",
+  "timestamp" : "2022-05-28T16:23:04Z",
   "count_outdated" : 263,
   "uniques_outdated" : 170,
-  "count" : 290,
-  "uniques" : 189,
+  "count" : 289,
+  "uniques" : 188,
   "clones" : [
     {
       "timestamp": "2022-05-14T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 4 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ]
+      "count": 1,
+      "count_minmax": [ 1, 4 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 2 ]
     },
     {
       "timestamp": "2022-05-15T00:00:00Z",
