@@ -1,11 +1,11 @@
 {
-  "count": 27,
+  "count": 26,
   "uniques": 12,
   "clones": [
     {
       "timestamp": "2022-05-14T00:00:00Z",
-      "count": 2,
-      "uniques": 2
+      "count": 1,
+      "uniques": 1
     },
     {
       "timestamp": "2022-05-15T00:00:00Z",
