@@ -1,3 +1,10 @@
+2022-05-28T16:23:04Z:
+* notice: last 14d: unq all: 12 26
+* notice: prev accum: outdated-unq outdated-all / unq all: 170 263 / 189 290
+* notice: next accum: outdated-unq outdated-all / unq all: 170 263 / 188 289
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -1 -1 / +0 +0 -1 -3 / 1 1
+* notice: changed dates: [2022-05-14]
+
 2022-05-28T08:20:53Z:
 * notice: last 14d: unq all: 12 27
 * notice: prev accum: outdated-unq outdated-all / unq all: 170 263 / 189 291
